[package]
name = "peekpoke-rs"
version = "0.1.0"
author = "Luca Brugnera <luca.brugnera@gmail.com>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.5.3"
clap = { version = "4.5.7", features = ["derive"] }
